--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   # 文件下载
   dio: ^5.3.2
   logger: ^2.6.1
+  
+  # Lottie动画支持
+  lottie: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -88,6 +91,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/user_demo.png
+    - assets/empty_note.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
